# RtspDvr

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/njda/sockectdemo2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DumpSink.cpp  KtRtspClient.cpp  KtStreamClientState.cpp  NjdaStream.cpp  native-lib.cpp  sdpUtils.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/include/: DummySink.h  IRtpStreamCb.h  KtRtspClient.h  KtStreamClientState.h  sdpUtils.h
app/src/main/cpp/interface/: Function.cpp  Function.h  Parameter.cpp  Parameter.h  StreamInterface.cpp  StreamInterface.h  interface.markdown
app/src/main/cpp/streamer/cpp/: DumpSink.cpp  KtAudioRecorder.cpp  KtRtpFrame.cpp  KtRtspClient.cpp  KtRtspStreamer.cpp  KtStreamClientState.cpp  NjdaStream.cpp  native-lib.cpp  sdpUtils.cpp
app/src/main/cpp/streamer/include/: DummySink.h  KtAudioRecorder.h  KtRtpFrame.h  KtRtspClient.h  KtStreamClientState.h  log_utils.h  sdpUtils.h
app/src/main/cpp/streamer/socket/cpp/: KtRtspRender.cpp  test.cpp
app/src/main/cpp/streamer/socket/include/: KtRtspRender.h  test.h
app/src/main/java/com/njda/sockectdemo2/: MainActivity.kt  MyApplication.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/njda/sockectdemo2/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
